--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Jacquard+12&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,15 +6,79 @@
 }
 body {
   background-image: url("https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  height: 400px;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 nav {
   margin-top: 25px;
   padding: 5px;
   color: black;
-  background-color: white;
+  background-color: wheat;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  text-decoration: none;
 }
-a {
-  padding: 20px;
+h2 {
+  border-bottom: 12px solid red;
+  margin: 28px;
+}
+p,
+h3 {
+  background-color: black;
+  padding: 15px;
+  font-family: "Dancing Script", cursive;
+}
+a,
+i {
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+}
+main {
+  color: wheat;
+  text-align: center;
+  font-size: 25px;
+  margin-top: 60px;
+}
+
+section {
+  font-family: "Jacquard 12", system-ui;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.card1,
+.card2,
+.card3 {
+  margin: 0 2rem 1rem 0;
+  padding: 1.5rem;
+  background-color: wheat;
+  color: black;
+  text-align: center;
+  width: 15rem;
+  border-radius: 1rem;
+  box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
+}
+.card1:hover,
+.card2:hover,
+.card3:hover {
+  transform: scale(1.02);
+}
+.fa-solid {
+  margin-bottom: 15px;
+  color: wheat;
+  background-color: black;
+  border-radius: 50%;
+  padding: 18px;
 }
